<resources>
    <string name="app_name">MyBand</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>

    <!-- Menu items -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Connecting...</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>

    <string name="set">Set</string>

    <string name="state">State: </string>

    <string name="ping">Ping: </string>

    <string name="rssi">rssi: </string>
    <string name="read_rssi">Read Rssi</string>

    <string name="start_vibration">Start Vibration</string>
    <string name="stop_vibration">Stop Vibration</string>
    <string name="heartrate">HeartRate: </string>
    <string name="set_heartrate_listener">Set HeartRate Listener</string>
    <string name="start_heartrate_scan">Start HeartRate Scan</string>
    <string name="set_notify_listener">Set Notify Listener</string>
    <string name="battery_info">BatteryInfo: </string>
    <string name="get_battery_info">Get BatteryInfo</string>

    <string name="address_has_been_updated">Address has been updated!</string>

    <string name="developer">Developer</string>
    <string name="left_hand">Left hand</string>
    <string name="right_hand">Right hand</string>
</resources>
